opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/content_security_policy"
bug-reports: "https://github.com/janestreet/content_security_policy/issues"
dev-repo: "git+https://github.com/janestreet/content_security_policy.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/content_security_policy/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "core"
  "ppx_jane"
  "dune"     {>= "2.0.0"}
]
synopsis: "A library for building content-security policies"
description: "
https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP
"
